fix vertical alignment

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,10 @@ main {
 }
 
 @media (min-width: 768px) {
+  body {
+    width: 100vw;
+    height: 100vh;
+  }
   main {
     width: 100%;
     flex-direction: row;
